--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,45 @@
-/**
- * The following styles get applied both on the front of your site
- * and in the editor.
- *
- * Replace them with your own styles or remove the file completely.
- */
+  @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
-.wp-block-create-block-githubrepo {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
-}
+
+  
+  $color-github: #4078c0;
+  $gray: #ccc;
+  $text: #555;
+  $spacing: 20px;
+  
+  .github-cards {
+	max-width: 100vw;
+	margin: 0 auto;
+	display: grid;
+	gap: 1rem;
+  }
+  
+  @media (min-width: 600px) {
+	.cards { grid-template-columns: repeat(2, 1fr); }
+  }
+  .github-card {
+	display: block;
+	box-sizing: border-box;
+	border: 1px solid $gray;
+	margin: $spacing/2;
+	padding: $spacing;
+	color: $text;
+	text-decoration: none;
+	font-size: 13px;
+	flex: 1;
+	min-width: 250px;
+	
+	> h3 {
+	  margin-top: 0;
+	  color: $color-github;
+	  font-size: 15px;
+	}
+  }
+  
+  .github-card__meta {
+	margin-right: $spacing;
+	
+	> i {
+	  font-size: 16px;
+	}
+  }
